Fri Dec 10 11:54:36 1999  Marcel Bosc  <bosc@ceic.com>

	* htcommon/defaults.cc : doc for wordlist_cache_size 

Thu Dec 09 17:07:47 1999  Marcel Bosc  <bosc@ceic.com>

	* htcommon/defaults.cc: added defaults for compression and DB configuration 
	parameters

Thu Dec 09 16:47:54 1999  Loic Dachary  <loic@ceic.com>

	* db/dist/configure.in,Makefile.in: Added shared lib support
	  for linux only. Not enabled if not on linux.

Thu Dec 09 15:07:11 1999  Loic Dachary  <loic@ceic.com>

	* acinclude.m4,db/dist/acinclude.mr: CHECK_ZLIB now fails if either
	  zlib.h or libz is not found.

	* configure.in: do not test zlib.h

	* db/db/db.c,db/mp/mp_fopen.c: added #ifdef HAVE_ZLIB so that
	  compilation works if zlib is not found

	* htlib/.cvsignore: remove wrong *.cxx

	* test/dbbench.cc: added #ifdef HAVE_ZLIB so that
	  compilation works if zlib is not found

Thu Dec 09 13:25:45 1999  Marcel Bosc  <bosc@ceic.com>

	* test/Word.cc,t_wordlist,Makefile.am: upgraded tests
	* htcommon/HtWordList.h: fixed Configuration/HtConfiguration problem 

Thu Dec 09 12:10:32 1999  Marcel Bosc  <bosc@ceic.com>

        * htword: Added the compression code:
	* WordDBCompress: Classes for page specific compression code
	* WordBitCompress: Classes for bitstreams and non-specific compression

Thu Dec  9 12:09:51 EET 1999  Vadim Chekan <vadim@etc.lviv.ua>

	* htcommon/HtConfiguration.cc: bug fix: sometimes
	htConfiguration::Find(url,char*) retuned empty values
	even if there was something to return.

Thu Dec 09 11:15:30 1999  Marcel Bosc  <bosc@ceic.com>

	* htlib/Configuration.cc (Read): Read is now a virtual function: the old one 
	for Configuration the new one (Vadim's ... with the parser) in HtConfiguration
	
Thu Dec 09 11:01:22 1999  Loic Dachary  <loic@ceic.com>

	* acinclude.m4: upgrade AC_PROG_APACHE macro for 
	  modules detection.

	* test/conf/httpd.conf,test/test_functions.in,test/conf/Makefile:
	  use @APACHE_MODULES@ to accomodate various apache modules directory
	  flavors.
